rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__b.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 36,
        "id": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "myVar",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 12,
                "end": 13,
                "moduleId": 0,
                "name": "x",
                "start": 12,
                "type": "Identifier"
              },
              "arg": {
                "commentStart": 14,
                "end": 15,
                "moduleId": 0,
                "raw": "5",
                "start": 14,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 5.0,
                  "suffix": "None"
                }
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 18,
                "end": 19,
                "moduleId": 0,
                "name": "y",
                "start": 18,
                "type": "Identifier"
              },
              "arg": {
                "argument": {
                  "arguments": [
                    {
                      "type": "LabeledArg",
                      "label": {
                        "commentStart": 31,
                        "end": 32,
                        "moduleId": 0,
                        "name": "z",
                        "start": 31,
                        "type": "Identifier"
                      },
                      "arg": {
                        "commentStart": 33,
                        "end": 34,
                        "moduleId": 0,
                        "raw": "4",
                        "start": 33,
                        "type": "Literal",
                        "type": "Literal",
                        "value": {
                          "value": 4.0,
                          "suffix": "None"
                        }
                      }
                    }
                  ],
                  "callee": {
                    "abs_path": false,
                    "commentStart": 21,
                    "end": 27,
                    "moduleId": 0,
                    "name": {
                      "commentStart": 21,
                      "end": 27,
                      "moduleId": 0,
                      "name": "legLen",
                      "start": 21,
                      "type": "Identifier"
                    },
                    "path": [],
                    "start": 21,
                    "type": "Name"
                  },
                  "commentStart": 21,
                  "end": 35,
                  "moduleId": 0,
                  "start": 21,
                  "type": "CallExpressionKw",
                  "type": "CallExpressionKw",
                  "unlabeled": {
                    "commentStart": 28,
                    "end": 29,
                    "moduleId": 0,
                    "raw": "5",
                    "start": 28,
                    "type": "Literal",
                    "type": "Literal",
                    "value": {
                      "value": 5.0,
                      "suffix": "None"
                    }
                  }
                },
                "commentStart": 20,
                "end": 35,
                "moduleId": 0,
                "operator": "-",
                "start": 20,
                "type": "UnaryExpression",
                "type": "UnaryExpression"
              }
            }
          ],
          "callee": {
            "abs_path": false,
            "commentStart": 8,
            "end": 11,
            "moduleId": 0,
            "name": {
              "commentStart": 8,
              "end": 11,
              "moduleId": 0,
              "name": "min",
              "start": 8,
              "type": "Identifier"
            },
            "path": [],
            "start": 8,
            "type": "Name"
          },
          "commentStart": 8,
          "end": 36,
          "moduleId": 0,
          "start": 8,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": null
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 36,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 36,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
