rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__ba.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 126,
        "id": {
          "end": 10,
          "name": "sketch001",
          "start": 1,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "arguments": [
                {
                  "end": 31,
                  "raw": "'XY'",
                  "start": 27,
                  "type": "Literal",
                  "type": "Literal",
                  "value": "XY"
                }
              ],
              "callee": {
                "abs_path": false,
                "end": 26,
                "name": {
                  "end": 26,
                  "name": "startSketchOn",
                  "start": 13,
                  "type": "Identifier"
                },
                "path": [],
                "start": 13,
                "type": "Name"
              },
              "end": 32,
              "start": 13,
              "type": "CallExpression",
              "type": "CallExpression"
            },
            {
              "arguments": [
                {
                  "end": 125,
                  "start": 124,
                  "type": "PipeSubstitution",
                  "type": "PipeSubstitution"
                }
              ],
              "callee": {
                "abs_path": false,
                "end": 123,
                "name": {
                  "end": 123,
                  "name": "startProfileAt",
                  "start": 109,
                  "type": "Identifier"
                },
                "path": [],
                "start": 109,
                "type": "Name"
              },
              "end": 126,
              "start": 109,
              "type": "CallExpression",
              "type": "CallExpression"
            }
          ],
          "end": 126,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "0": [
                {
                  "end": 46,
                  "start": 35,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "|> arc({",
                    "style": "line"
                  }
                },
                {
                  "end": 68,
                  "start": 49,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "angleEnd: 270,",
                    "style": "line"
                  }
                },
                {
                  "end": 92,
                  "start": 71,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "angleStart: 450,",
                    "style": "line"
                  }
                },
                {
                  "end": 103,
                  "start": 95,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "}, %)",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "start": 13,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "start": 1,
        "type": "VariableDeclarator"
      },
      "end": 126,
      "kind": "const",
      "start": 1,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 127,
  "start": 0
}
