rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bc.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 68,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "cond": {
            "commentStart": 7,
            "end": 11,
            "moduleId": 0,
            "raw": "true",
            "start": 7,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "digest": null,
          "else_ifs": [],
          "end": 68,
          "final_else": {
            "body": [
              {
                "commentStart": 57,
                "end": 58,
                "expression": {
                  "commentStart": 57,
                  "end": 58,
                  "moduleId": 0,
                  "raw": "4",
                  "start": 57,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 4.0,
                    "suffix": "None"
                  }
                },
                "moduleId": 0,
                "start": 57,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "commentStart": 57,
            "end": 67,
            "moduleId": 0,
            "start": 57,
            "type": "Program"
          },
          "moduleId": 0,
          "start": 4,
          "then_val": {
            "body": [
              {
                "commentStart": 26,
                "end": 27,
                "expression": {
                  "commentStart": 26,
                  "end": 27,
                  "moduleId": 0,
                  "raw": "3",
                  "start": 26,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 3.0,
                    "suffix": "None"
                  }
                },
                "moduleId": 0,
                "start": 26,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "commentStart": 26,
            "end": 36,
            "moduleId": 0,
            "start": 26,
            "type": "Program"
          },
          "type": "IfExpression",
          "type": "IfExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 68,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 68,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
