rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bd.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 115,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "cond": {
            "commentStart": 7,
            "end": 11,
            "moduleId": 0,
            "raw": "true",
            "start": 7,
            "type": "Literal",
            "type": "Literal",
            "value": true
          },
          "digest": null,
          "else_ifs": [
            {
              "commentStart": 38,
              "cond": {
                "arguments": [],
                "callee": {
                  "abs_path": false,
                  "commentStart": 46,
                  "end": 50,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 46,
                    "end": 50,
                    "moduleId": 0,
                    "name": "func",
                    "start": 46,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 46,
                  "type": "Name"
                },
                "commentStart": 46,
                "end": 58,
                "moduleId": 0,
                "start": 46,
                "type": "CallExpressionKw",
                "type": "CallExpressionKw",
                "unlabeled": {
                  "abs_path": false,
                  "commentStart": 51,
                  "end": 57,
                  "moduleId": 0,
                  "name": {
                    "commentStart": 51,
                    "end": 57,
                    "moduleId": 0,
                    "name": "radius",
                    "start": 51,
                    "type": "Identifier"
                  },
                  "path": [],
                  "start": 51,
                  "type": "Name",
                  "type": "Name"
                }
              },
              "digest": null,
              "end": 84,
              "moduleId": 0,
              "start": 38,
              "then_val": {
                "body": [
                  {
                    "commentStart": 73,
                    "end": 74,
                    "expression": {
                      "commentStart": 73,
                      "end": 74,
                      "moduleId": 0,
                      "raw": "4",
                      "start": 73,
                      "type": "Literal",
                      "type": "Literal",
                      "value": {
                        "value": 4.0,
                        "suffix": "None"
                      }
                    },
                    "moduleId": 0,
                    "start": 73,
                    "type": "ExpressionStatement",
                    "type": "ExpressionStatement"
                  }
                ],
                "commentStart": 59,
                "end": 83,
                "moduleId": 0,
                "start": 59,
                "type": "Program"
              },
              "type": "ElseIf"
            }
          ],
          "end": 115,
          "final_else": {
            "body": [
              {
                "commentStart": 104,
                "end": 105,
                "expression": {
                  "commentStart": 104,
                  "end": 105,
                  "moduleId": 0,
                  "raw": "5",
                  "start": 104,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 5.0,
                    "suffix": "None"
                  }
                },
                "moduleId": 0,
                "start": 104,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "commentStart": 104,
            "end": 114,
            "moduleId": 0,
            "start": 104,
            "type": "Program"
          },
          "moduleId": 0,
          "start": 4,
          "then_val": {
            "body": [
              {
                "commentStart": 26,
                "end": 27,
                "expression": {
                  "commentStart": 26,
                  "end": 27,
                  "moduleId": 0,
                  "raw": "3",
                  "start": 26,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 3.0,
                    "suffix": "None"
                  }
                },
                "moduleId": 0,
                "start": 26,
                "type": "ExpressionStatement",
                "type": "ExpressionStatement"
              }
            ],
            "commentStart": 26,
            "end": 36,
            "moduleId": 0,
            "start": 26,
            "type": "Program"
          },
          "type": "IfExpression",
          "type": "IfExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 115,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 115,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
