rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bf.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 10,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "end": 10,
          "left": {
            "commentStart": 4,
            "end": 5,
            "moduleId": 0,
            "raw": "3",
            "start": 4,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 3.0,
              "suffix": "None"
            }
          },
          "moduleId": 0,
          "operator": "!=",
          "right": {
            "commentStart": 9,
            "end": 10,
            "moduleId": 0,
            "raw": "3",
            "start": 9,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 3.0,
              "suffix": "None"
            }
          },
          "start": 4,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 10,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 10,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
