rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bi.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 5,
        "id": {
          "commentStart": 0,
          "end": 1,
          "moduleId": 0,
          "name": "x",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 4,
          "end": 5,
          "moduleId": 0,
          "raw": "3",
          "start": 4,
          "type": "Literal",
          "type": "Literal",
          "value": {
            "value": 3.0,
            "suffix": "None"
          }
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 5,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "commentStart": 14,
      "declaration": {
        "commentStart": 14,
        "end": 31,
        "id": {
          "commentStart": 14,
          "end": 17,
          "moduleId": 0,
          "name": "obj",
          "start": 14,
          "type": "Identifier"
        },
        "init": {
          "commentStart": 20,
          "end": 31,
          "moduleId": 0,
          "properties": [
            {
              "commentStart": 22,
              "end": 23,
              "key": {
                "commentStart": 22,
                "end": 23,
                "moduleId": 0,
                "name": "x",
                "start": 22,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 22,
              "type": "ObjectProperty",
              "value": {
                "abs_path": false,
                "commentStart": 22,
                "end": 23,
                "moduleId": 0,
                "name": {
                  "commentStart": 22,
                  "end": 23,
                  "moduleId": 0,
                  "name": "x",
                  "start": 22,
                  "type": "Identifier"
                },
                "path": [],
                "start": 22,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "commentStart": 25,
              "end": 30,
              "key": {
                "commentStart": 25,
                "end": 26,
                "moduleId": 0,
                "name": "y",
                "start": 25,
                "type": "Identifier"
              },
              "moduleId": 0,
              "start": 25,
              "type": "ObjectProperty",
              "value": {
                "commentStart": 29,
                "end": 30,
                "moduleId": 0,
                "raw": "4",
                "start": 29,
                "type": "Literal",
                "type": "Literal",
                "value": {
                  "value": 4.0,
                  "suffix": "None"
                }
              }
            }
          ],
          "start": 20,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "moduleId": 0,
        "start": 14,
        "type": "VariableDeclarator"
      },
      "end": 31,
      "kind": "const",
      "moduleId": 0,
      "start": 14,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 31,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
