rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bj.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "end": 4,
      "expression": {
        "commentStart": 0,
        "end": 4,
        "moduleId": 0,
        "raw": "true",
        "start": 0,
        "type": "Literal",
        "type": "Literal",
        "value": true
      },
      "moduleId": 0,
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 4,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
