rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__bk.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "end": 5,
      "expression": {
        "abs_path": false,
        "commentStart": 0,
        "end": 5,
        "moduleId": 0,
        "name": {
          "commentStart": 0,
          "end": 5,
          "moduleId": 0,
          "name": "truee",
          "start": 0,
          "type": "Identifier"
        },
        "path": [],
        "start": 0,
        "type": "Name",
        "type": "Name"
      },
      "moduleId": 0,
      "start": 0,
      "type": "ExpressionStatement",
      "type": "ExpressionStatement"
    }
  ],
  "commentStart": 0,
  "end": 5,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
